Attempt to fix z-index (Safari Bug)

--- a/client/src/styles/components/auth/_SignIn.scss
+++ b/client/src/styles/components/auth/_SignIn.scss
@@ -55,6 +55,8 @@
     &:before {
       color: $placeholder-font-color;
 
+      transform-style: preserve-3d;
+
       @extend %placeholder-text-no-icon;
     }
 
